<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">HaPlanet</string>

    <string name="login_to_your_account">Login to your account</string>
    <string name="hint_please_input_email">Please input email</string>

    <string name="email_address">Email address</string>
    <string name="password">Password</string>

    <string name="already_have_an_account">Already have an account?</string>
    <string name="title_login">Log in</string>

    <string name="dont_have_an_account">Don\'t have an account yet?</string>
    <string name="title_signup">Sign up</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone number</string>
    <string name="home">Home</string>
    <string name="find">Find</string>
    <string name="post">Post</string>
    <string name="message">Message</string>
    <string name="profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="default_info_title">Default Location</string>
    <string name="default_info_snippet">No places found, because location permission is disabled.</string>

</resources>