<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_item_home"
        android:icon="@drawable/ic_home"
        android:title="@string/home"
        app:showAsAction="always" />

    <item android:id="@+id/nav_item_find"
        android:icon="@drawable/ic_find"
        android:title="@string/find"
        app:showAsAction="always" />

    <item android:id="@+id/nav_item_post"
        android:icon="@drawable/ic_post"
        android:title="@string/find"
        app:showAsAction="always" />

    <item android:id="@+id/nav_item_message"
        android:icon="@drawable/ic_message"
        android:title="@string/message"
        app:showAsAction="always" />

    <item android:id="@+id/nav_item_user"
        android:icon="@drawable/ic_person"
        android:title="@string/profile"
        app:showAsAction="always" />

</menu>