<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:orientation="vertical" >

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_margin="30dp"
        android:src="@mipmap/planet_logo"
        android:layout_gravity="center_horizontal"
        app:riv_border_color="@color/xui_config_color_gray_6"
        app:riv_corner_radius="15dp"
        app:riv_selected_border_color="@color/xui_config_color_gray_4"
        app:riv_selected_mask_color="@color/xui_config_color_gray_8"
        android:focusable="true" />

    <TextView
        style="@style/TextStyle.Title"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:text="Create new account"
        android:textSize="25sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:hint="Username"
            android:drawableStart="@drawable/custom_username_icon"
            android:background="@drawable/custom_input"
            android:layout_marginTop="15dp"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:drawablePadding="15dp"
            android:inputType="textPersonName"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:hint="@string/email_address"
            android:drawableStart="@drawable/custom_email_icon"
            android:background="@drawable/custom_input"
            android:layout_marginTop="15dp"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:drawablePadding="15dp"
            android:inputType="textEmailAddress"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:hint="@string/password"
            android:drawableStart="@drawable/custom_lock_icon"
            android:background="@drawable/custom_input"
            android:layout_marginTop="15dp"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:drawablePadding="15dp"
            android:inputType="textPassword"
            android:textSize="15sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_add_avatar"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginLeft="50dp"
                android:layout_margin="10dp"
                android:scaleType="centerCrop"
                android:background="@drawable/ic_add_image" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="Add an avatar"
                android:textColor="#33989090"/>

        </LinearLayout>

        <com.xuexiang.xui.widget.textview.supertextview.SuperButton
            android:id="@+id/btn_register"
            style="@style/SuperButton.Primary.Register"
            android:layout_marginTop="30dp"
            android:text="Sign up"
            app:sSelectorNormalColor="#F3ABAB"
            app:sSelectorPressedColor="#F8D7D7" />

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                style="@style/TextStyle.Explain"
                android:layout_width="wrap_content"
                android:text="@string/already_have_an_account"
                android:textColor="@color/xui_config_color_primary_text" />

            <TextView
                android:id="@+id/tv_login"
                style="@style/TextStyle.Explain"
                android:layout_width="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/title_login"
                android:textColor="#F3ABAB" />

        </LinearLayout>

    </FrameLayout>

</LinearLayout>